them-moi-form-score.sua-logo.them-time.sua-lai-form-ingame

--- a/public/layout-css/detail.css
+++ b/public/layout-css/detail.css
@@ -126,6 +126,7 @@ aside .toggle{
 aside .toggle .logo{
     display: flex;
     gap: 0.5rem;
+    margin-left: 50px;
 }
 
 aside .toggle .logo img{
