--- a/public/layout-css/ingame.css
+++ b/public/layout-css/ingame.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -28,59 +28,48 @@ form {
     display: flex;
     flex-direction: column;
     height: 100%;
-}
-
-.ingame-header, .ingame-footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #fff;
-}
-
-.ingame-header,
-.ingame-footer .ingame-total{
-    color: #28282d;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
+    width: 100%;
 }
 
 .ingame-header {
-    flex: 0 0 10%;
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px;
     background-color: #333;
     color: #fff;
-}
-
-.ingame-topic {
-    flex: 1;
-    display: flex;
-    align-items: center;
+    flex: 0 0 10%;
 }
 
 .ingame-time {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    color: #fff;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 .ingame-content {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     background-color: #fff;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .ingame-ques {
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1;
     text-align: center;
     font-size: 24px;
-    margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
+    margin-bottom: 20px;
 }
 
 .ingame-list {
@@ -88,17 +77,17 @@ form {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: 33%;
-    margin-bottom: 0;
+    height: 50%;
+    align-items: flex-end;
 }
 
 .answer-options {
-    flex: 0 0 48%;
-    height: 50%;
+    flex: 0 0 49%;
+    height: 48%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     background-color: #007bff;
     color: white;
     border-radius: 5px;
@@ -107,97 +96,18 @@ form {
     cursor: pointer;
 }
 
-.answer-options .span {
-    padding: 10px;
-}
-
-.ingame-footer {
-    flex: 0 0 10%;
-    display: flex;
-    align-items: center;
-    margin-top: auto;
-}
-
-.ingame-total {
-    flex: 1;
-}
-
-.ingame-button{
-    display: flex;
-    padding: 10px;
-    font-family: sans-serif;
-}
-
-.button {
-    all: unset;
-    width: 100px;
-    height: 30px;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    position: relative;
-    color: #f0f0f0;
+.answer-options button {
+    width: 100%;
+    height: 100%;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
     cursor: pointer;
-    z-index: 1;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    gap: 10px;
-    margin: 10px;
 }
 
-.button::after,
-.button::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -99999;
-    transition: all .4s;
-}
-
-.button::before {
-    transform: translate(0%, 0%);
-    width: 100%;
-    height: 100%;
-    background: #28282d;
-    border-radius: 10px;
-}
-
-.button::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
-
-.button:hover::before {
-    transform: translate(5%, 20%);
-    width: 110%;
-    height: 110%;
-}
-
-.button:hover::after {
-    border-radius: 10px;
-    transform: translate(0, 0);
-    width: 100%;
-    height: 100%;
-}
-
-.button:active::after {
-    transition: 0s;
-    transform: translate(0, 5%);
-}
-
-/* MOBILE */
+/* Cho màn hình có max-width 1200px */
 @media (max-width: 1200px) {
     .ingame-header, .ingame-footer {
         padding: 15px;
@@ -212,11 +122,12 @@ form {
     }
 
     .ingame-list {
-        height: 35%;
+        height: 50%;
     }
 
     .answer-options {
         font-size: 16px;
+        height: 48%;
     }
 
     .button {
@@ -226,6 +137,7 @@ form {
     }
 }
 
+/* Cho màn hình có max-width 768px */
 @media (max-width: 768px) {
     body {
         padding: 10px;
@@ -254,12 +166,13 @@ form {
     }
 
     .ingame-list {
-        height: 40%;
+        height: 50%;
     }
 
     .answer-options {
-        flex: 0 0 100%;
-        height: 45%;
+        flex: 0 0 49%;
+        height: 48%;
+        margin-bottom: 0;
     }
 
     .button {
