--- a/public/layout-css/user.css
+++ b/public/layout-css/user.css
@@ -230,6 +230,7 @@ main.table {
     border-radius: .8rem;
     overflow: hidden;
     margin-top: 70px;
+    table-layout: fixed;
 }
 
 .table__header {
@@ -241,6 +242,26 @@ main.table {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.table__title{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.table__title button{
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #0c84ff;
+    border-radius: 5px;
 }
 
 .table__header .input-group {
@@ -512,7 +533,38 @@ thead th.active,tbody td.active {
     height: auto;
 }
 
+.table__footer {
+    width: 100%;
+    height: 8%;
+    background-color: #fff4;
+    padding: .8rem 1rem;
+    position: sticky;
+    bottom: 0;
+    background-color: #ffffff; /* Đảm bảo pagination luôn nhìn thấy rõ */
+}
 
+.pagination{
+    display: flex;
+    justify-content:flex-end;
+    width: 100%;
+    padding: 5px  ;
+}
+
+.pagination div{
+    padding: 10px;
+    border: 2px solid #d5d0d0;
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #0c84ff;
+    color: #ffffff;
+    border-shadow:0 0 4px 0 rgba(0,0,0,0.75) ;
+    margin: 0 5px;
+    cursor: pointer;
+}
 /*END CONTENT*/
 
 /*RIGHT SIDE*/
