sua-form-search-mygame

--- a/public/layout-css/mygame.css
+++ b/public/layout-css/mygame.css
@@ -221,6 +221,39 @@ aside .sidebar .message-count{
     height: 98vh; /* Chiều cao toàn màn hình */
 }
 
+.input-group {
+    width: 35%;
+    height: 100%;
+    background-color: #fff5;
+    padding: 1rem;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .2s;
+    margin-bottom: 20px;
+    margin-left: 50px;
+}
+
+.input-group:hover {
+    width: 45%;
+    background-color: #fff8;
+    box-shadow: 0 .1rem .4rem #0002;
+}
+
+.input-group img {
+    width: 1.2rem;
+    height: 1.2rem;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 0 .5rem 0 .3rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
 .main-content .pagination{
     margin-top: auto; /* Đẩy pagination xuống dưới cùng */
     padding-bottom: 20px;
