--- a/public/layout-css/gamesadmin.css
+++ b/public/layout-css/gamesadmin.css
@@ -288,6 +288,20 @@ main.table {
     outline: none;
 }
 
+.table__body form button{
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #fa001b;
+    border-radius: 5px;
+}
+
 .table__body {
     width: 95%;
     max-height: calc(89% - 1.6rem);
