--- a/public/layout-css/score.css
+++ b/public/layout-css/score.css
@@ -189,6 +189,25 @@ thead {
     color: var(--clr-neutral-100);
 }
 
+.summary {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.summary-form {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.summary .button {
+    align-self: flex-end;
+    margin-top: 2rem;
+    margin-bottom:10px;
+    margin-left: 100px;
+}
+
 @media (min-width: 600px) {
     .summary-form {
         max-height: 400px;
