--- a/public/layout-css/editgame.css
+++ b/public/layout-css/editgame.css
@@ -345,15 +345,15 @@ input[type="text"] {
     border-radius: 10px;
 }
 
-.button::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
+/*.button::after {*/
+/*    transform: translate(10px, 10px);*/
+/*    width: 35px;*/
+/*    height: 35px;*/
+/*    background: #ffffff15;*/
+/*    backdrop-filter: blur(5px);*/
+/*    -webkit-backdrop-filter: blur(5px);*/
+/*    border-radius: 50px;*/
+/*}*/
 
 .button:hover::before {
     transform: translate(5%, 20%);
