--- a/public/layout-css/generate.css
+++ b/public/layout-css/generate.css
@@ -311,14 +311,14 @@ aside .sidebar .message-count{
     border-radius: 10px;
 }
 
-.card-footer .btn::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
+/*.card-footer .btn::after {*/
+/*    transform: translate(10px, 10px);*/
+/*    width: 35px;*/
+/*    height: 35px;*/
+/*    background: #ffffff15;*/
+/*    backdrop-filter: blur(5px);*/
+/*    border-radius: 50px;*/
+/*}*/
 
 .card-footer .btn:hover::before {
     transform: translate(5%, 20%);
