--- a/public/layout-css/welcomeHomeUser.css
+++ b/public/layout-css/welcomeHomeUser.css
@@ -300,15 +300,15 @@ aside .sidebar .message-count{
     border-radius: 10px;
 }
 
-.button::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
+/*.button::after {*/
+/*    transform: translate(10px, 10px);*/
+/*    width: 35px;*/
+/*    height: 35px;*/
+/*    background: #ffffff15;*/
+/*    backdrop-filter: blur(5px);*/
+/*    -webkit-backdrop-filter: blur(5px);*/
+/*    border-radius: 50px;*/
+/*}*/
 
 .button:hover::before {
     transform: translate(5%, 20%);
