sua-mygame.sua-loading.sua-score

--- a/public/layout-css/mygame.css
+++ b/public/layout-css/mygame.css
@@ -257,7 +257,7 @@ aside .sidebar .message-count{
 
 .main-content .pagination{
     margin-top: auto; /* Đẩy pagination xuống dưới cùng */
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     flex-shrink: 0; /* Giữ cho pagination không bị co lại */
 }
 
@@ -272,46 +272,59 @@ aside .sidebar .message-count{
 .parent{
     height: 300px; /* Cố định chiều cao cho parent */
     width: 300px; /* Cố định chiều rộng cho parent */
-    padding: 0 40px 40px 40px;
+    padding: 0 50px 50px 50px;
     perspective: 1000px;
     box-sizing: border-box;
+    margin-right: 25px;
 }
 
 .card{
-    padding-top: 100px;
+    padding-top: 80px;
     transform-style: preserve-3d;
-    background-image: url('/images/img1.jpg');
+    background: #ffc8a2;
+    /*background-image: url('/images/img1.jpg');*/
     background-position: center center;
     width: 100%; /* Giữ nguyên chiều rộng */
     max-width: 300px; /* Đặt chiều rộng tối đa */
     height: 300px; /* Cố định chiều cao */
     transition: all 0.5s ease-in-out;
     border-radius: 10px;
-
+    border: 1px solid #ddd;
+    box-shadow: rgba(0,0,0,0.25);
+    display: grid;
+    position: absolute;
 }
 
-.card:hover{
-    background-position: 80% 20%;
-    transform: rotate3d(0.5,1,0,30deg);
-}
+/*.card:hover{*/
+/*    background-position: 80% 20%;*/
+/*    transform: rotate3d(0.5,1,0,30deg);*/
+/*}*/
 
 .content-box{
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.81);
+    background-color: rgb(255, 255, 255);
     border-radius: 0px 0px 10px 10px;
-    box-shadow: rgba(0,115,255,0.925) 0px 20px 50px -25px;
+    box-shadow: rgba(0,0,0,0.25) 0px 20px 20px -20px;
     transition: all 0.5s ease-in-out;
-    padding: 50px 25px 25px 25px;
+    padding: 35px 25px 25px 25px;
     transform-style: preserve-3d;
     overflow: hidden; /* Tránh tràn nội dung khi dữ liệu quá dài */
+    position: relative;
+}
+
+.card-quiz{
+    padding-bottom:10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
 }
 
 .card-topic{
-    color: white;
-    font-size: 15px;
+    color: black;
+    font-size: 18px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     transition: all 0.5s ease-in-out;
     transform: translate3d(0px,0px,20px);
     overflow: hidden; /* Ẩn nội dung tràn */
@@ -322,15 +335,15 @@ aside .sidebar .message-count{
 
 .card-topic {
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Hiển thị tối đa 2 dòng */
+    -webkit-line-clamp: 3; /* Hiển thị tối đa 3 dòng */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.card-topic:hover{
-    transform: translate3d(0px,0px,50px);
-}
+/*.card-topic:hover{*/
+/*    transform: translate3d(0px,0px,50px);*/
+/*}*/
 
 .card-description{
     padding-top: 15px;
@@ -338,14 +351,16 @@ aside .sidebar .message-count{
     color: rgb(185,185,185);
     transition: all 0.5s ease-in-out;
     transform: translate3d(0px,0px,20px);
+    position: absolute; /* Đặt vị trí tuyệt đối */
+    bottom: 25%; /* Nằm dưới cùng */
 }
 
-.card-description:hover{
-    transform: translate3d(0px,0px,50px);
-}
+/*.card-description:hover{*/
+/*    transform: translate3d(0px,0px,50px);*/
+/*}*/
 
 .play{
-    display: block;
+    /*display: block;*/
     font-weight: 900;
     font-size: 11px;
     text-transform: uppercase;
@@ -354,30 +369,34 @@ aside .sidebar .message-count{
     transition: all 0.5s ease-in-out;
     transform: translate3d(0px,0px,20px);
     text-decoration: none;
+    position: absolute; /* Đặt vị trí tuyệt đối */
+    bottom: 0; /* Nằm dưới cùng */
+    margin-bottom: 25px;
 }
 
-.play:hover{
-    transform: translate3d(0px,0px,50px);
-}
+/*.play:hover{*/
+/*    transform: translate3d(0px,0px,50px);*/
+/*}*/
 
-.qr-box{
-    position: absolute;
-    top: 75px;
-    left: 25px;
-    height: 60px;
-    width: 60px;
-    background-color: white;
-    border-radius: 10px;
-    padding: 12px;
-    box-shadow: rgb(0,102,255) 0px 20px 60px 0px, rgb(0,200,255) 0px 18px 36px -18px;
-    transform: translate3d(0px,0px,50px);
-}
+/*.qr-box{*/
+/*    position: absolute;*/
+/*    top: 75px;*/
+/*    left: 25px;*/
+/*    height: 60px;*/
+/*    width: 60px;*/
+/*    background-color: white;*/
+/*    border-radius: 10px;*/
+/*    padding: 12px;*/
+/*    box-shadow: rgb(0,102,255) 0px 20px 60px 0px, rgb(0,200,255) 0px 18px 36px -18px;*/
+/*    transform: translate3d(0px,0px,50px);*/
+/*}*/
 
-.qr-box img{
-    width: 100%;
-    height: 100%;
-    object-fit:cover ;
-}
+/*.qr-box img{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit:cover ;*/
+/*}*/
+
 
 
 /*END CONTENT*/
@@ -452,7 +471,17 @@ aside .sidebar .message-count{
     }
 
     .input-group {
-        width: 70%;
+        width: 90%;
+    }
+
+    .main-content{
+        height: 100%;
+    }
+
+    .main-content .pagination{
+        margin-top: auto; /* Đẩy pagination xuống dưới cùng */
+        /*padding-bottom: 10px;*/
+        flex-shrink: 0; /* Giữ cho pagination không bị co lại */
     }
 
     aside {
@@ -540,5 +569,11 @@ aside .sidebar .message-count{
     .right-section .nav button span{
         font-size: 2rem;
     }
+}
+@media screen and (max-width: 425px){
+    .input-group{
+        width: 75%;
+    }
+
 }
 /*END MOBILE*/
