--- a/public/layout-css/score.css
+++ b/public/layout-css/score.css
@@ -1,216 +1,657 @@
-@font-face {
-    font-family: 'HankenGrotesk';
-    font-display: swap;
-    font-weight: 100 900;
-    src: url('assets/fonts/HankenGrotesk-VariableFont_wght.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
-:root {
-    --clr-primary-hsl-400: 252, 100%, 67%;
-    --clr-primary-hsl-500: 256, 72%, 46%;
-    --clr-secondary-hsl-400: 241, 81%, 54%;
-    --clr-secondary-hsl-500: 241, 72%, 46%;
-    --clr-neutral-hsl-100: 0, 0%, 100%;
-    --clr-neutral-hsl-700: 224, 30%, 27%;
-    --clr-neutral-100: hsl(var(--clr-neutral-hsl-100));
-    --clr-neutral-700: hsl(var(--clr-neutral-hsl-700));
-    --clr-primary-400: hsl(var(--clr-primary-hsl-400));
-    --clr-primary-500: hsla(var(--clr-primary-hsl-500));
-    --clr-secondary-400: hsl(var(--clr-secondary-hsl-400));
-    --gradient-primary: linear-gradient(var(--clr-primary-400), var(--clr-secondary-400));
-    --gradient-to-transparent: linear-gradient(var(--clr-primary-500), hsl(var(--clr-secondary-hsl-500), 0));
-    --clr-accent-1: 0, 100%, 67%;
-    --clr-accent-2: 39, 100%, 56%;
-    --clr-accent-3: 166, 100%, 37%;
-    --clr-accent-4: 234, 85%, 45%;
-    --font-family-default: 'HankenGrotesk', sans-serif;
-    --fw-bold: 700;
-    --fw-black: 800;
-    --fs-400: 1.125rem;
-    --fs-600: 1.5rem;
-    --fs-700: 1.75rem;
-    --fs-900: 5rem;
-}
 
-*,
-*::before,
-*::after {
+/*:root {*/
+/*    --clr-primary-hsl-400: 252, 100%, 67%;*/
+/*    --clr-primary-hsl-500: 256, 72%, 46%;*/
+/*    --clr-secondary-hsl-400: 241, 81%, 54%;*/
+/*    --clr-secondary-hsl-500: 241, 72%, 46%;*/
+/*    --clr-neutral-hsl-100: 0, 0%, 100%;*/
+/*    --clr-neutral-hsl-700: 224, 30%, 27%;*/
+/*    --clr-neutral-100: hsl(var(--clr-neutral-hsl-100));*/
+/*    --clr-neutral-700: hsl(var(--clr-neutral-hsl-700));*/
+/*    --clr-primary-400: hsl(var(--clr-primary-hsl-400));*/
+/*    --clr-primary-500: hsla(var(--clr-primary-hsl-500));*/
+/*    --clr-secondary-400: hsl(var(--clr-secondary-hsl-400));*/
+/*    --gradient-primary: linear-gradient(var(--clr-primary-400), var(--clr-secondary-400));*/
+/*    --gradient-to-transparent: linear-gradient(var(--clr-primary-500), hsl(var(--clr-secondary-hsl-500), 0));*/
+/*    --clr-accent-1: 0, 100%, 67%;*/
+/*    --clr-accent-2: 39, 100%, 56%;*/
+/*    --clr-accent-3: 166, 100%, 37%;*/
+/*    --clr-accent-4: 234, 85%, 45%;*/
+/*    --font-family-default: 'HankenGrotesk', sans-serif;*/
+/*    --fw-bold: 700;*/
+/*    --fw-black: 800;*/
+/*    --fs-400: 1.125rem;*/
+/*    --fs-600: 1.5rem;*/
+/*    --fs-700: 1.75rem;*/
+/*    --fs-900: 5rem;*/
+/*}*/
+
+/**,*/
+/**::before,*/
+/**::after {*/
+/*    box-sizing: border-box;*/
+/*    margin: 0;*/
+/*    font: inherit;*/
+/*}*/
+
+/*body {*/
+/*    font-family: var(--font-family-default);*/
+/*    font-size: var(--fs-400);*/
+/*    color: var(--clr-neutral-700);*/
+/*    margin: 0;*/
+/*}*/
+
+/*img,*/
+/*svg {*/
+/*    display: block;*/
+/*    max-width: 100%;*/
+/*}*/
+
+/*@media (min-width: 600px) {*/
+/*    body {*/
+/*        min-height: 100vh;*/
+/*        display: grid;*/
+/*        place-items: center;*/
+/*    }*/
+/*}*/
+
+/*.grid-flow {*/
+/*    display: grid;*/
+/*    align-content: start;*/
+/*    gap: 1rem;*/
+/*}*/
+
+/*.grid-flow[data-spacing="large"] {*/
+/*    gap: 2rem;*/
+/*}*/
+
+/*.result-title {*/
+/*    font-weight: var(--fw-bold);*/
+/*    font-size: var(--fs-600);*/
+/*}*/
+
+/*.button {*/
+/*    color: var(--clr-neutral-100);*/
+/*    line-height: 1;*/
+/*    background: var(--clr-neutral-700);*/
+/*    padding: 1rem 2rem;*/
+/*    border: 0;*/
+/*    border-radius: 100vw;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*.button:hover,*/
+/*.button:focus-visible {*/
+/*    background: var(--gradient-primary);*/
+/*}*/
+
+/*.result-summary {*/
+/*    --padding: 2.5rem;*/
+/*    --border-radius: 2rem;*/
+/*    max-width: 46rem;*/
+/*    display: grid;*/
+/*}*/
+
+/*@media (min-width: 600px) {*/
+/*    .result-summary {*/
+/*        margin-inline: 1rem;*/
+/*        grid-template-columns: 1fr 1fr;*/
+/*        border-radius: var(--border-radius);*/
+/*        overflow: hidden;*/
+/*        box-shadow: .5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), .2);*/
+/*    }*/
+/*}*/
+
+/*.results {*/
+/*    color: hsl(var(--clr-neutral-hsl-100), .7);*/
+/*    text-align: center;*/
+/*    padding: var(--padding) calc(var(--padding) * 1.5);*/
+/*    background: var(--gradient-primary);*/
+/*    border-radius: 0 0 var(--border-radius) var(--border-radius);*/
+/*}*/
+
+/*@media (min-width: 600px) {*/
+/*    .results {*/
+/*        border-radius: var(--border-radius);*/
+/*    }*/
+/*}*/
+
+/*.result-score {*/
+/*    display: grid;*/
+/*    place-content: center;*/
+/*    width: 12rem;*/
+/*    margin-inline: auto;*/
+/*    background: var(--gradient-to-transparent);*/
+/*    aspect-ratio: 1 / 1;*/
+/*    border-radius: 50%;*/
+/*}*/
+
+/*.result-score span {*/
+/*    display: block;*/
+/*    font-size: var(--fs-900);*/
+/*    font-weight: var(--fw-black);*/
+/*    line-height: 1;*/
+/*    color: var(--clr-neutral-100);*/
+/*}*/
+
+/*.result-name {*/
+/*    color: var(--clr-neutral-100);*/
+/*    font-size: var(--fs-700);*/
+/*    font-weight: var(--fw-bold);*/
+/*}*/
+
+/*.summary-form {*/
+/*    overflow-x: auto;*/
+/*}*/
+
+/*table {*/
+/*    width: 100%;*/
+/*    border-collapse: collapse;*/
+/*    background-color: var(--clr-neutral-100);*/
+/*}*/
+
+/*th, td {*/
+/*    padding: 1rem;*/
+/*    text-align: left;*/
+/*    border-bottom: 1px solid var(--clr-neutral-700);*/
+/*}*/
+
+/*thead {*/
+/*    background-color: var(--clr-primary-400);*/
+/*    color: var(--clr-neutral-100);*/
+/*}*/
+
+/*.summary-form {*/
+/*    max-height: 30%;*/
+/*    overflow-y: auto;*/
+/*}*/
+
+/*table {*/
+/*    width: 100%;*/
+/*    border-collapse: collapse;*/
+/*    background-color: var(--clr-neutral-100);*/
+/*}*/
+
+/*th, td {*/
+/*    padding: 1rem;*/
+/*    text-align: left;*/
+/*    border-bottom: 1px solid var(--clr-neutral-700);*/
+/*}*/
+
+/*thead {*/
+/*    background-color: var(--clr-primary-400);*/
+/*    color: var(--clr-neutral-100);*/
+/*}*/
+
+/*.summary {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-between;*/
+/*    height: 100%;*/
+/*}*/
+
+/*.summary-form {*/
+/*    flex-grow: 1;*/
+/*    overflow-y: auto;*/
+/*}*/
+
+/*.summary .button {*/
+/*    align-self: flex-end;*/
+/*    margin-top: 2rem;*/
+/*    margin-bottom:10px;*/
+/*    margin-left: 100px;*/
+/*}*/
+
+/*@media (min-width: 600px) {*/
+/*    .summary-form {*/
+/*        max-height: 400px;*/
+/*    }*/
+/*}*/
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center; : 100%;
+    height: 100vh;
     box-sizing: border-box;
-    margin: 0;
-    font: inherit;
+    background-color: #f5f5f5;
 }
 
-body {
-    font-family: var(--font-family-default);
-    font-size: var(--fs-400);
-    color: var(--clr-neutral-700);
-    margin: 0;
+.right-side {
+    height: 98vh;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /*background-color: #ffffff; !* Màu nền nhạt *!*/
+    border-radius: 10px;
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+    padding: 20px;
+    box-sizing: border-box;
+    position: absolute;
 }
 
-img,
-svg {
-    display: block;
-    max-width: 100%;
+.left-side{
+    width: 90%;
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
-@media (min-width: 600px) {
-    body {
-        min-height: 100vh;
-        display: grid;
-        place-items: center;
-    }
+.left-side-title,
+.right-title{
+    margin: 50px;
+    text-align: center;
+    font-size: 3em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
-.grid-flow {
-    display: grid;
-    align-content: start;
-    gap: 1rem;
+.left-side-content{
+    font-size: 1.5em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
 }
 
-.grid-flow[data-spacing="large"] {
-    gap: 2rem;
+.right-side-main{
+    height: 50%;
+    width: 90%;
+    padding: 20px;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 100px;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
-.result-title {
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-600);
+/*.right-title {*/
+/*    font-size: 24px;*/
+/*    font-weight: bold;*/
+/*    color: #333;*/
+/*    margin-bottom: 20px;*/
+/*    text-align: center;*/
+/*}*/
+
+.right-title{
+    justify-content: space-around;
+}
+
+.right-form {
+    width: 95%;
+    max-height: calc(89% - 1.6rem);
+    background-color: #fffb;
+
+    margin: .8rem auto;
+    border-radius: .6rem;
+
+    overflow: auto;
+    overflow: overlay;
+}
+
+.right-form::-webkit-scrollbar{
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+.right-form::-webkit-scrollbar-thumb{
+    border-radius: .5rem;
+    background-color: #0004;
+    visibility: hidden;
+}
+
+.right-form:hover::-webkit-scrollbar-thumb{
+    visibility: visible;
+}
+
+
+table {
+    width: 100%;
+}
+
+td img {
+    width: 36px;
+    height: 36px;
+    margin-right: .5rem;
+    border-radius: 50%;
+
+    vertical-align: middle;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    padding: 1rem;
+    text-align: left;
+}
+
+thead th {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #d5d1defe;
+    cursor: pointer;
+    text-transform: capitalize;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #0000000b;
+}
+
+tbody tr {
+    --delay: .1s;
+    transition: .5s ease-in-out var(--delay), background-color 0s;
+}
+
+tbody tr.hide {
+    opacity: 0;
+    transform: translateX(100%);
+}
+
+tbody tr:hover {
+    background-color: #fff6
+}
+
+tbody tr td,
+tbody tr td p,
+tbody tr td img {
+    transition: .2s ease-in-out;
+}
+
+tbody tr.hide td,
+tbody tr.hide td p {
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    transition: .2s ease-in-out .5s;
+}
+
+tbody tr.hide td img {
+    width: 0;
+    height: 0;
+    transition: .2s ease-in-out .5s;
+}
+
+.content-footer{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 20px;
 }
 
 .button {
-    color: var(--clr-neutral-100);
-    line-height: 1;
-    background: var(--clr-neutral-700);
-    padding: 1rem 2rem;
-    border: 0;
-    border-radius: 100vw;
+    all: unset;
+    width: 100px;
+    height: 30px;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    position: relative;
+    color: #f0f0f0;
     cursor: pointer;
-}
-
-.button:hover,
-.button:focus-visible {
-    background: var(--gradient-primary);
-}
-
-.result-summary {
-    --padding: 2.5rem;
-    --border-radius: 2rem;
-    max-width: 46rem;
-    display: grid;
-}
-
-@media (min-width: 600px) {
-    .result-summary {
-        margin-inline: 1rem;
-        grid-template-columns: 1fr 1fr;
-        border-radius: var(--border-radius);
-        overflow: hidden;
-        box-shadow: .5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), .2);
-    }
-}
-
-.results {
-    color: hsl(var(--clr-neutral-hsl-100), .7);
-    text-align: center;
-    padding: var(--padding) calc(var(--padding) * 1.5);
-    background: var(--gradient-primary);
-    border-radius: 0 0 var(--border-radius) var(--border-radius);
-}
-
-@media (min-width: 600px) {
-    .results {
-        border-radius: var(--border-radius);
-    }
-}
-
-.result-score {
-    display: grid;
-    place-content: center;
-    width: 12rem;
-    margin-inline: auto;
-    background: var(--gradient-to-transparent);
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-}
-
-.result-score span {
-    display: block;
-    font-size: var(--fs-900);
-    font-weight: var(--fw-black);
-    line-height: 1;
-    color: var(--clr-neutral-100);
-}
-
-.result-name {
-    color: var(--clr-neutral-100);
-    font-size: var(--fs-700);
-    font-weight: var(--fw-bold);
-}
-
-.summary-form {
-    overflow-x: auto;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: var(--clr-neutral-100);
-}
-
-th, td {
-    padding: 1rem;
-    text-align: left;
-    border-bottom: 1px solid var(--clr-neutral-700);
-}
-
-thead {
-    background-color: var(--clr-primary-400);
-    color: var(--clr-neutral-100);
-}
-
-.summary-form {
-    max-height: 30%;
-    overflow-y: auto;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: var(--clr-neutral-100);
-}
-
-th, td {
-    padding: 1rem;
-    text-align: left;
-    border-bottom: 1px solid var(--clr-neutral-700);
-}
-
-thead {
-    background-color: var(--clr-primary-400);
-    color: var(--clr-neutral-100);
-}
-
-.summary {
+    z-index: 1;
+    padding: 10px 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button::after,
+.button::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -99999;
+    transition: all .4s;
+}
+
+.button::before {
+    transform: translate(0%, 0%);
+    width: 100%;
+    height: 100%;
+    background: #28282d;
+    border-radius: 10px;
+}
+
+/*.button::after {*/
+/*    transform: translate(10px, 10px);*/
+/*    width: 35px;*/
+/*    height: 35px;*/
+/*    background: #ffffff15;*/
+/*    backdrop-filter: blur(5px);*/
+/*    -webkit-backdrop-filter: blur(5px);*/
+/*    border-radius: 50px;*/
+/*}*/
+
+.button:hover::before {
+    transform: translate(5%, 20%);
+    width: 110%;
+    height: 110%;
+}
+
+.button:hover::after {
+    border-radius: 10px;
+    transform: translate(0, 0);
+    width: 100%;
     height: 100%;
 }
 
-.summary-form {
-    flex-grow: 1;
-    overflow-y: auto;
+.button:active::after {
+    transition: 0s;
+    transform: translate(0, 5%);
 }
 
-.summary .button {
-    align-self: flex-end;
-    margin-top: 2rem;
-    margin-bottom:10px;
-    margin-left: 100px;
+@media (max-width: 425px) {
+    .right-side {
+        height: 98vh;
+        width: 100%; /* Đặt chiều rộng phần tử */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /*background-color: #f5f5f5; !* Màu nền nhạt *!*/
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        box-sizing: border-box;
+        position: absolute;
+    }
+
+    .left-side{
+        width: 90%;
+        padding: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+    }
+
+    .left-side-title,
+    .right-title{
+        margin: 10px;
+        text-align: center;
+        font-size: 2em;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .left-side-content{
+        font-size: 1em;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    .right-side-main{
+        height: 50%;
+        width: 90%;
+        padding: 20px;
+        text-align: center;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 100px;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .right-title{
+        justify-content: space-around;
+    }
 }
 
-@media (min-width: 600px) {
-    .summary-form {
-        max-height: 400px;
+@media (max-width: 768px) {
+    .right-side {
+        height: 98vh;
+        width: 100%; /* Đặt chiều rộng phần tử */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /*background-color: #f5f5f5; !* Màu nền nhạt *!*/
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        box-sizing: border-box;
+        position: absolute;
+    }
+
+    .left-side{
+        width: 90%;
+        padding: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+    }
+
+    .left-side-title,
+    .right-title{
+        margin: 10px;
+        text-align: center;
+        font-size: 2em;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .left-side-content{
+        font-size: 1em;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    .right-side-main{
+        height: 50%;
+        width: 90%;
+        padding: 20px;
+        text-align: center;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 100px;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .right-title{
+        justify-content: space-around;
+    }
+}
+
+@media (max-width: 1440px) {
+    .right-side {
+        height: 98vh;
+        width: 100%; /* Đặt chiều rộng phần tử */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /*background-color: #f5f5f5; !* Màu nền nhạt *!*/
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        box-sizing: border-box;
+        position: absolute;
+    }
+
+    .left-side{
+        width: 90%;
+        padding: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+    }
+
+    .left-side-title,
+    .right-title{
+        margin: 10px;
+        text-align: center;
+        font-size: 2em;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .left-side-content{
+        font-size: 1em;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    .right-side-main{
+        height: 50%;
+        width: 90%;
+        padding: 20px;
+        text-align: center;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 100px;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .right-title{
+        justify-content: space-around;
     }
 }
 
